fixed overlaping of the about section when you click the hamburger icon on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,8 @@ ul li a {
 	position: fixed;
 	top: 0;
 	left: 0;
-	background-color: hsla(210, 29%, 22%, 0.8);
+	background-color: hsl(210, 29%, 22%);
+	z-index: 11;
 } 
 
 
